--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
     <div>
       <ul>
         <li><a href="#">기업분석보고서</a></li>
-        <span>추가버튼</span>
+        <li><span>추가버튼</span></li>
       </ul>
       <ul>
         <li><a href="#">IR자료</a></li>
-        <span>추가버튼</span>
+        <li><span>추가버튼</span></li>
       </ul>
     </div>
   </div>
@@ -468,9 +468,6 @@
 </div>
 </div>
 <!-- //content4 -->
-
-</div>
-<!-- //container -->
 <div class="scroll">
   <ul>
     <li class="on"><a href="#">MAIN<i></i></a></li>
@@ -479,6 +476,10 @@
     <li><a href="#">상위종목정보<i></i></a></li>
   </ul>
 </div>
+
+</div>
+<!-- //container -->
+
 <hr/>
 <!-- footer -->
 <div id="footer">
