--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
             <li><a href="#"></a></li>
             <li>
               <ul>
-                <li class="next"><a href="#"><i class="fa-solid fa-chevron-left"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-play"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-pause"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-chevron-right"></i></a></li>
+                <li class="next"><a href="#" title="이전"><i class="fa-solid fa-chevron-left"></i></a></li>
+                <li><a href="#" title="재생"><i class="fa-solid fa-play"></i></a></li>
+                <li><a href="#" title="멈춤"><i class="fa-solid fa-pause"></i></a></li>
+                <li><a href="#" title="다음"><i class="fa-solid fa-chevron-right"></i></a></li>
               </ul>
             </li>
           </ul>
