--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="loding">
           <ul>
             <li><a href="#">01/02</a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#" title="대기"></a></li>
             <li>
               <ul>
                 <li class="next"><a href="#" title="이전"><i class="fa-solid fa-chevron-left"></i></a></li>
@@ -158,10 +158,10 @@
   <div class="images">
     <ul>
       <li class="on">
-        <a href="#"></a>
+        <a href="#" title="사진" ></a>
       </li>
       <li>
-        <a href="#"></a>
+        <a href="#" title="사진"></a>
       </li>
     </ul>
   </div>
