--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>한국거래소 코스닥 글로벌</title>
+<meta name="description" content="편입종목 리스트, ESG 평가정보, 공시정보, 코스닥 글로벌 지수, 통계 등 세그먼트 관련 종합정보를 제공하는 코스닥 글로벌 전용 홈페이지">
+<meta name="keywords" content="코스닥 글로벌, 세그먼트">
+<meta name="author" content="김승현">
 <script src="https://kit.fontawesome.com/b3ce958290.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="css/import.css"/>
 <link rel="stylesheet" href="css/main.css"/>
