--- a/index.html
+++ b/index.html
@@ -471,18 +471,18 @@
 </div>
 </div>
 <!-- //content4 -->
-<div class="scroll">
-  <ul>
-    <li class="on"><a href="#">MAIN<i></i></a></li>
-    <li><a href="#">편입기업현황<i></i></a></li>
-    <li><a href="#">코스닥 글로벌 주요현황<i></i></a></li>
-    <li><a href="#">상위종목정보<i></i></a></li>
-  </ul>
-</div>
+
 
 </div>
 <!-- //container -->
-
+<nav>
+  <ul class="scrollTop">
+    <li class="on"><a href="#"></a><span>MAIN</span></li>
+    <li><a href="#"></a><span>편입기업현황</span></li>
+    <li><a href="#"></a><span>코스닥 글로벌 주요현황</span></li>
+    <li><a href="#"></a><span>상위종목정보</span></li>
+  </ul>
+</nav>
 <hr/>
 <!-- footer -->
 <div id="footer">
