--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <h1 class="logo"><a href="index.html">KOSDAQ GLOBAL</a></h1>
   <h2 class="blind">주메뉴</h2>
   <ul>
-    <li><a href="#">코스닥글로벌 소개</a>
+    <li><a href="sub_form.html">코스닥글로벌 소개</a>
     <div>
     <ul>
       <li><a href="#">세그먼트 제도</a></li>
@@ -48,7 +48,7 @@
     </div>
     </li>
   
-    <li><a href="#">편입종목</a>
+    <li><a href="sub_table.html">편입종목</a>
     <div>
     <ul>
       <li><a href="#">편입종목 리스트</a></li>
@@ -70,7 +70,7 @@
     </div>
     </li>
   
-    <li><a href="#">연계상품</a>
+    <li><a href="sub_form.html">연계상품</a>
     <div>
     <ul>
       <li><a href="#">세그먼트 지수</a></li>
@@ -79,7 +79,7 @@
     </div>
     </li>
   
-    <li><a href="#">통계</a>
+    <li><a href="sub_table.html">통계</a>
     <div>
     <ul>
       <li><a href="#">한눈에 보는 코스닥 글로벌</a>
@@ -105,7 +105,7 @@
     </div>
     </li>
   
-    <li><a href="#">참여마당</a>
+    <li><a href="sub_form.html">참여마당</a>
     <div>
     <ul>
       <li><a href="#">새소식</a></li>
@@ -140,7 +140,7 @@
             <li>
               <ul>
                 <li class="next"><a href="#" title="이전"><i class="fa-solid fa-chevron-left"></i></a></li>
-                <li><a href="#" title="재생"><i class="fa-solid fa-play"></i></a></li>
+                <li class="loading_play"><a href="#" title="재생"><i class="fa-solid fa-play"></i></a></li>
                 <li><a href="#" title="멈춤"><i class="fa-solid fa-pause"></i></a></li>
                 <li><a href="#" title="다음"><i class="fa-solid fa-chevron-right"></i></a></li>
               </ul>
